<resources>
    <string name="app_name">SMS Spam Block</string>
    <string name="Message">Message</string>
    <string name="Black_list">Blacklist</string>
    <string name="White_list">Whitelist</string>
    <string name="Journal">Event Log</string>
    <string name="Setting">Setting</string>
    <string name="Information">Information</string>
    <string name="Exit">Exit</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="From_contacts_list">From_contacts_list</string>
    <string name="From_calls_list">From_contacts_list</string>
    <string name="From_SMS_list">From_SMS_list</string>
    <string name="From_Black_list">From_Black_list</string>
    <string name="From_White_list">From_White_list</string>
    <string name="Manually">Manually</string>
    <string name="Add_contact">Add_contact</string>
    <string name="List_of_contacts">List_of_contacts</string>
    <string name="List_of_calls">List_of_calls</string>
    <string name="List_of_SMS">List_of_SMS</string>
    <string name="CANCEL">CANCEL</string>
    <string name="ADD">ADD</string>
    <string name="SELECT_ALL">Select All</string>
    <string name="Clear">Clear</string>
    <string name="Starts_with">Starts_with</string>
    <string name="Ends_with">Ends_with</string>
    <string name="Contains">Contains</string>
    <string name="DELETE">DELETE</string>
    <string name="Edit_contact">Edit_contact</string>
    <string name="Remove_contact">Remove_contact</string>
    <string name="Move_to_black_list">Move_to_black_list</string>
    <string name="Move_to_white_list">Move_to_black_list</string>
    <string name="Search_action">Search_action</string>
    <string name="Editing_contact">Editing_contact</string>
    <string name="Adding_contact">Adding_contact</string>
</resources>
