<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Message"
            android:title="@string/Message" />
        <item
            android:id="@+id/nav_BlackList"
            android:title="@string/Black_list" />
        <item
            android:id="@+id/nav_WhiteList"
            android:title="@string/White_list" />
        <item
            android:id="@+id/nav_Setting"
            android:title="@string/Setting" />
        <item
            android:id="@+id/nav_Information"
            android:title="@string/Information" />
        <item
            android:id="@+id/nav_Journal"
            android:title="@string/Journal" />
        <item
            android:id="@+id/exit"
            android:title="@string/Exit" />
    </group>
</menu>